@@ -24,7 +24,7 @@ BuildGen:create("omnimatter","burner-omnitractor"):
 	setEnabled():
 	setReplace("omnitractor"):
 	setNextUpgrade("omnitractor-1"):
-	setStacksize(10):
+	setStacksize(50):
 	setSize(3):
 	setCrafting({"omnite-extraction-both","omnite-extraction-burner"}):
 	setSpeed(1):
@@ -107,7 +107,7 @@ BuildChain:create("omnimatter","omnitractor"):
 				return nil 
 			end
 		end):
-	setStacksize(10):
+	setStacksize(50):
 	allowProductivity():
 	setLevel(settings.startup["omnimatter-max-tier"].value):
 	setSoundWorking("ore-crusher"):
