@@ -7,6 +7,7 @@ Date: ????
   Changes:
     - Changed burner omnitractor and burner omniphlog crafting time to 5 s (10s / 1s before)
     - Doubled crushed omnite, pulverized omnite and pulverized stone crafting times
+    - Increases Stacksize of all entities to 50
   Bugfixes:
     - Fixed that the omnifurnace had a wrong working sound set
     - Fixed omnite bricks having the wrong map color
